# point-cloud-recognition

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Structured_Pointcloud_data.py  Unstructured_Pointcloud_data.py  config.ini  footage4.rrd  footage5.rrd  requirements.txt  tempCodeRunnerFile.py
footages/: footage5.rrd  footage6.rrd  full_rendering.rrd
include/: DBSCAN.hpp  camera_fuser.hpp  collection_adapter.hpp  datas.hpp  eigen_formatter.hpp  helper.hpp  lidar_parser.hpp  nn_helper.hpp  oxts_parser.hpp  parser.hpp
include/3D_Ground_Segmentation/: ground_plane_fitting.h
labels/: _classes.json
script/: add_data_script.py
script/helper_scripts/: add_data_script.py  gen_main_script.py
script/labeling/: segments_dataset_loader.py  segments_labels.py
script/training/: voxel_multitask_net.py
src/: main.cpp  training_data_collector.cpp
src/3D_Ground_Segmentation/: ground_plane_fitting.cpp
test/: cv_test.cpp  test.cpp
